 cnp-pci-dss-1.3.3-egress-600r13y.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-pci-dss-1.3.3-egress-ubq9keu
  namespace: kube-system
spec:
  description: "This policy will allow outbound connection using kube-dns in port 53"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 56fd47777c
      k8s-app: gcp-compute-persistent-disk-csi-driver
      pod-template-generation: 1
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
  namespace: kube-system
